--- a/app/assets/stylesheets/dashboard/_dashboard.scss
+++ b/app/assets/stylesheets/dashboard/_dashboard.scss
@@ -12,6 +12,52 @@
   }
 }
 
+.date-box {
+  background-color: black;
+  border-radius: 2px;
+  color: white;
+  height: 30px;
+  text-align: center;
+  padding: 4px 4px 4px 8px;
+  width: 170px;
+  position: absolute;
+  top: -16px;
+  left: -20px;
+  text-align: left;
+  p {
+    margin: 0px;
+  }
+}
+.collapsible {
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+.collapsible:after {
+  content: '+'; /* Unicode character for "plus" sign (+) */
+  font-size: 20px;
+  color: white;
+  // margin-right: 5px;
+}
+
+.active, .collapsible:hover {
+  background-color: $magenta;
+}
+
+.active:after {
+  content: "-"; /* Unicode character for "minus" sign (-) */
+  color: white;
+  font-size: 20px;
+  padding-left: 10px;
+  // margin-right: 5px;
+}
+
+.content {
+  display: flex;
+  display: none;
+}
+
 .headline {
   text-align: left;
   padding: 0 5% 60px;
@@ -176,22 +222,6 @@
   text-decoration: none;
 }
 
-.date-box {
-  background-color: black;
-  border-radius: 2px;
-  color: white;
-  height: 30px;
-  text-align: center;
-  padding: 4px 4px 4px 8px;
-  width: 170px;
-  position: absolute;
-  top: -16px;
-  left: -20px;
-  text-align: left;
-  p {
-    margin: 0px;
-  }
-}
 
 .event-card-section {
   display: flex;
