--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -158,7 +158,7 @@
     <iframe src="https://open.spotify.com/embed/playlist/0K0RsJ0xxaTDZIKQ1vszY3" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
   </div >
-  <div class="event-chat" id="event-chat"> 
+  <div class="event-chat" id="user-<%= current_user.id %>"> 
     <div class="chat-box" data-chatroom-id="<%= @event.chatroom.id %>">
       <% @event.messages.each do |message| %>
         <% if message.user == current_user %>
