--- a/app/assets/stylesheets/pages/_bring_list.scss
+++ b/app/assets/stylesheets/pages/_bring_list.scss
@@ -8,44 +8,53 @@
     flex-direction: row;
     justify-content: stretch;
     // flex-flow: row wrap;
-}
-.items-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: $beige;
-    width: 100%;
-    border-radius: 2px;
-    align-content: space-between;
-    padding: 40px;
-}
-.list-container {
-    background-color: $white;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    border: 1.5px solid black;
-    border-radius: 2px;
-    h2{ color: black; 
-    text-align: center;}
+
+    .items-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: $beige;
+        width: 100%;
+        border-radius: 2px;
+        align-content: space-between;
+        padding: 40px;
+        
+        .list-container {
+            background-color: $white;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+            border: 1.5px solid black;
+            border-radius: 2px;
+            h2{ color: black; 
+            text-align: center;}
+            }
     }
-.playlist-container {
-margin-left: 50px;
-display: flex;
-justify-content: center;
-background-color: $beige;
-width: 500px;
+    .playlist-container {
+        margin-left: 50px;
+        display: flex;
+        justify-content: center;
+        background-color: $beige;
+        width: 500px;
+        .playlist {
+            text-align: center;
+            padding: 3%;
+            width: 500px;
+            height: 100%;
+            }   
+}
+
+
+
+
+
 h2 {
     color: $black;
     text-align: center;
     }
-    .playlist {
-        text-align: center;
-        padding: 3%;
-        width: 500px;
-        height: 100%;
-        }    
+
+ 
 }
 .add-item {
     margin-top: 16px;
@@ -73,6 +82,32 @@ h2 {
     height: calc(100% - 120px);
     max-height: 415px;
     overflow: scroll;
+    
+    tr {
+        font: 200 20px/1.5 Gilroy, sans-serif;
+        border-bottom: 1px solid #ccc;
+        width: 100%;
+      }
+      th {
+      
+          padding:6px 5px; 
+          text-align: center;
+      }
+      td  {
+          text-align: center;
+          padding:6px 5px;
+      }
+      
+}
+.items-form {
+    display: inline-block;
+}
+.items-list {
+    background-color: $white ; 
+    height: calc(100% - 120px);
+    max-height: 415px;
+    overflow: scroll;
+    
     tr {
         font: 200 20px/1.5 Gilroy, sans-serif;
         border-bottom: 1px solid #ccc;
