--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,4 @@
+<% if @event.is_invited?(current_user) || @event.user == current_user %>
 <div class="event-container">
   <% if @event.banner.attached? %>
     <div class="event-banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @event.banner.key %>')"> 
@@ -207,3 +208,9 @@
   </div>
 </div>
 
+<% else %>
+  <div class="event-error">
+    <i class="fas fa-exclamation-triangle"></i>
+    <div class="event-error-message">Sorry, but You are not invited to this event!</div>
+    </div>
+<% end %>
