--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,8 +27,8 @@
               <div id="user-name"><%= "#{current_user.first_name} #{current_user.last_name}"  %></div>
             <% end %>
             <div class="dropdown-links"><i class="far fa-user"></i><%= link_to "Profile", user_path(current_user) %></div>
-            <div class="dropdown-links"><i class="far fa-calendar-alt"></i><%= link_to "My Events", dashboard_index_path %></div>
-            <div class="dropdown-links"><i class="far fa-calendar-plus"></i><%= link_to "Host event", new_event_path %></div> 
+            <div class="dropdown-links"><i class="far fa-calendar-alt"></i><%= link_to "My Events", dashboard_index_path(anchor: "today-anchor") %></div>
+            <div class="dropdown-links"><i class="far fa-calendar-plus"></i><%= link_to "Host event", new_event_path %></div>
             <div class="dropdown-links", id="log-out-link" ><%= link_to "Log out", destroy_user_session_path, method: "delete" %></div>
           </div>
         </div>
