--- a/app/views/events/_chat.html.erb
+++ b/app/views/events/_chat.html.erb
@@ -1,40 +1,24 @@
 <div class="section-header">The Chat</div>
   <div class="chat-box" data-chatroom-id="<%= @event.chatroom.id %>">
     <% @event.messages.each do |message| %>
-      <% if message.user == current_user %>
-      <div class="message-container message-container-user" id="message-<%= message.id %>">
-      <% else %>
-      <div class="message-container" id="message-<%= message.id %>">
-      <% end %>
+      <div class="message-container <%= "message-container-user" if message.user == current_user %>" id="message-<%= message.id %>">
         <% unless current_user == message.user %>
-          <% if message.user.avatar.attached? %>
-            <div class="chat-avatar" style="background-image: url('<%= cl_image_path message.user.avatar.key %>')"></div>
-          <% else %>
-            <div class="chat-avatar" style="background-image: url('<%= image_path "placeholder-avatar.png" %>')"></div>
-          <% end %>  
+            <div class="chat-avatar" style="background-image: url('<%=  message.user.avatar.attached? ? cl_image_path(message.user.avatar.key): image_path("placeholder-avatar.png") %>')"></div>
         <% end %>
-        <% if message.user == current_user %>
-        <div class="message message-user">
-        <div class="message-content message-content-user">
-        <%= message.content %>
+        <div class="message <%= "message-user" if message.user == current_user %>">
+          <div class="message-content <%= "message-content-user" if message.user == current_user %>">
+            <%= message.content %>
           </div>
-          <div class="message-username-time username-time-right">
-        <% else %>
-        <div class="message">
-        <div class="message-content">
-        <%= message.content %>
-          </div>
-          <div class="message-username-time">
-        <% end %>
-            <% if message.user.full_name %>
-              <% unless message.user == current_user %>
-                <div class="message-username"><%= message.user.full_name %></div>
-              <% else %>
-                <div class="message-username">You</div>
+          <div class="message-username-time <%= "username-time-right" if message.user == current_user %> ">
+            <div class="message-username">
+              <%= link_to user_path(message.user) do %>
+                <% if message.user != current_user  %>
+                  <%= message.user.full_name.strip.empty? ? "Nemo" : message.user.full_name %>
+                <% else %>
+                  You
+                <% end %>
               <% end %>
-            <% else %>
-              <div class="message-username">Nemo</div>
-            <% end %>
+            </div>
             <div class="message-time"><%= message.created_at.strftime("on %a %b %e at %l:%M %p") %></div>
           </div>
         </div>
