--- a/app/views/events/update.js.erb
+++ b/app/views/events/update.js.erb
@@ -1,3 +1,3 @@
-document.querySelector("#test").innerHTML="<%= j render(:partial => 'shared/items_form') %>";
+document.querySelector("#items-anchor").innerHTML="<%= j render(:partial => 'shared/items_form') %>";
 
 
