completed the meta-tags setup

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -39,7 +39,8 @@ h2 {
 
 
 #banner {
-    background-image: image-url('homepage_banner.jpg')
+    background-image: image-url('homepage_banner.jpg');
+    background-repeat: round;
 }
 
 * {
